--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "169e1b84-05cb-4566-962c-f3372220a9f5",
-  "name": "BusinessCentral_Desarrollo",
+  "name": "Academia",
   "publisher": "Default publisher",
   "version": "1.0.0.0",
   "brief": "",
