Removed gitignore + Folder oorganization

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id": "169e1b84-05cb-4566-962c-f3372220a9f5",
   "name": "Academia",
-  "publisher": "Default publisher",
+  "publisher": "Javier Corcero y Marcos Navarro",
   "version": "1.0.0.0",
   "brief": "",
   "description": "",
